Fixed overflow-x in the pagination for the datatable

--- a/views/scss/inc/_datatable.scss
+++ b/views/scss/inc/_datatable.scss
@@ -45,6 +45,10 @@
             }
         }
     }
+    .datatable-pagination-bottom,
+    .datatable-pagination-top {
+        overflow-x: hidden;
+    }
 }
 .datatable-container {
     overflow-y: auto;
